tests/bad/testfile-wrong-type-incdec.go
package main

func main() {"a"++;}
